--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@
     border-radius: 7px;
 }
 body{
-    background-color: aquamarine;
+    background-color: bisque;
 }
 #root {
     max-width: 1280px;
